# MECH7171

./: .gitignore
.SCARA_Robot_Simulator/: SCARA Robot Background Info.docx
lab5/: CMakeLists.txt  task1_2.in  task3_test0.in  task3_test1.in  task3_test2.in
lab5/include/: constants.h  helper_functions.h  robot.h
lab5/src/: robot.cpp
lab5/task1/: CMakeLists.txt
lab5/task1/src/: lab5_task1.c  lab5_task1.h
lab5/task2/: CMakeLists.txt
lab5/task2/src/: lab5_task2.c  lab5_task2.h
lab5/task3/: CMakeLists.txt
lab_0/: CMakeLists.txt
lab_0/src/: constants.h  test_robot.c
lab_0/src/robot/: robot.cpp  robot.h
lab_2/task_1/: CMakeLists.txt
lab_2/task_1/src/: lab2_task1.c
lab_2/task_2/: CMakeLists.txt
lab_2/task_2/_build/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
lab_2/task_2/_build/.cmake/api/v1/reply/: cache-v2-550fe2fd0babab82578e.json  cmakeFiles-v1-703b5c33eeb40c8d4194.json  codemodel-v2-3cd838d7f1b38fb533f1.json  index-2025-10-04T19-44-34-0200.json  target-lab2_task2-Debug-8d2fb5bbbc691e24a36b.json
lab_2/task_2/_build/_debug/: lab2_task2.ilk
lab_2/task_2/src/: lab2_task2.c
lab_3/lab3_task1/: CMakeLists.txt
lab_3/lab3_task1/src/: lab3_task1.c  robot.h
lab_3/lab3_task2/: CMakeLists.txt
lab_3/lab3_task2/src/: lab2 task2.c  robot.cpp
lab_4/: CMakeLists.txt
lab_4/src/: constants.h  lab4.c  robot.cpp  robot.h
